--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "white-dice",
+    "version": "1.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/niaeashes/white-dice"
@@ -10,7 +11,7 @@
         "MD5": "1.2.x",
         "mongoose": "3.8.x",
         "jade": "1.5.x"
-        "bson": "0.3.x"
+        "js-bson": "0.3.x"
     },
     "private": true,
     "license": "MIT"
