--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "white-dice",
-    "version": "1.0",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/niaeashes/white-dice"
-    },
-    "dependencies": {
-        "express": "4.8.x",
-        "socket.io": "1.0.x",
-        "MD5": "1.2.x",
-        "mongoose": "3.8.x",
-        "jade": "1.5.x"
-        "js-bson": "0.3.x"
-    },
-    "private": true,
-    "license": "MIT"
+  "name": "white-dice",
+  "version": "1.0.2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/niaeashes/white-dice"
+  },
+  "dependencies": {
+    "bson": "^0.4.19",
+    "express": "4.8.x",
+    "jade": "1.5.x",
+    "md5": "2.x",
+    "mongoose": "3.8.x",
+    "socket.io": "1.0.x"
+  },
+  "private": true,
+  "license": "MIT"
 }
