--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "url": "https://github.com/niaeashes/white-dice"
   },
   "dependencies": {
-    "bson": "^0.4.19",
+    "bson": "^1.0.4",
+    "discord.js": "^11.0.0",
     "express": "4.8.x",
     "jade": "1.5.x",
     "md5": "2.x",
-    "mongoose": "3.8.x",
+    "mongoose": "^4.9.1",
     "socket.io": "1.0.x"
   },
   "private": true,
